--- a/package.json
+++ b/package.json
@@ -13,5 +13,15 @@
   },
   "dependencies": {
     "any-promise": "^0.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rosszurowski/async-json-parse.git"
+  },
+  "keywords": [
+    "json",
+    "parse",
+    "async",
+    "promise"
+  ]
 }
